--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!--Google Material Icons-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
   <!--GSAP & ScrollToPlugin-->
@@ -50,6 +51,7 @@
 
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
+  <script defer src="./js/common.js"></script>
 </head>
 <body>
 
